began working on cold war stuff and map editors